--- a/WEBDEV_Task1-Calculator/index.html
+++ b/WEBDEV_Task1-Calculator/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width" />
     <title>Calculator</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <!-- <link href="utils.css" rel="stylesheet" type="text/css" /> -->
   </head>
 
   <body>
-    <h1 class="text-center">Calculate anything you need answers to!</h1>
+    <h3 class="text-center">CALC IT!</h3>
     <div class="container flex flex-col items-center mx-auto m-w-20">
       <div class="row">
         <input class="input" id="myInput" type="text" value=""/>
