--- a/WEBDEV_Task1-Calculator/index.html
+++ b/WEBDEV_Task1-Calculator/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Calculator</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="resetstylesheet" href="reset.css" />
   </head>
 
   <body>
